--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   dart_openai: ^5.1.0
   flutter_dotenv: ^5.1.0
   audioplayers: ^6.0.0
+  path_provider: ^2.1.2
+  wakelock_plus: ^1.2.4
 
 dev_dependencies:
   flutter_test:
