--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  dart_openai: ^5.1.0
-  flutter_dotenv: ^5.1.0
-  audioplayers: ^6.0.0
   path_provider: ^2.1.2
   wakelock_plus: ^1.2.4
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
